[package]
name = "day05"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace=true, features = ["derive"] }
itertools = "0.12.0"
once_cell = {workspace=true}
rayon = "1.8.0"
regex = {workspace=true}
